housekeeping (records, remove Lombok)