@@ -116,7 +116,7 @@ public class RestExceptionHandler {
         ex,
         HttpStatus.NOT_ACCEPTABLE,
         request,
-        String.format("Use acceptable media types %s.", ex.getSupportedMediaTypes().toString()));
+        "Use acceptable media types %s.".formatted(ex.getSupportedMediaTypes()));
   }
 
   @ResponseBody
